[eap-additional-testsuite] :  Final structure of eap-additional-testsuite. Tests are written once and @EapAdditionalTestsuite annotation is used to distribute them to the desirable servers.