@@ -15,7 +15,9 @@
             
     <properties>
 	<standalone.conf>../src/test/config/standaloneWildfly/standalone.xml</standalone.conf>
-        <jbossas.ts.integ.dir>${basedir}/../../../../..</jbossas.ts.integ.dir>
+        <jboss.modules.dir>${basedir}/../../../../..</jboss.modules.dir>
+        <surefire.memory.args>-Xmx512m -XX:MaxPermSize=256m</surefire.memory.args>
+        <surefire.system.args>${surefire.memory.args} -Djboss.dist=${jboss.modules.dir}/wildfly/build/target/jbossas -DjbossHome=${jboss.modules.dir}/wildfly/build/target/jbossas</surefire.system.args>
     </properties>
         
     <build>
@@ -28,6 +30,23 @@
 	    <plugin>
 		<groupId>org.apache.maven.plugins</groupId>
 		<artifactId>maven-surefire-plugin</artifactId>
+
+                <configuration>
+                    <!-- Prevent test and server output appearing in console. -->
+                    <redirectTestOutputToFile>${testLogToFile}</redirectTestOutputToFile>
+
+                    <systemPropertyVariables>
+                        <jboss.options>${surefire.system.args}</jboss.options>
+                        <jboss.home>${jboss.modules.dir}/wildfly/build/target/jbossas</jboss.home>
+                        <module.path>${jboss.modules.dir}/wildfly/build/target/jbossas/modules</module.path>
+                    </systemPropertyVariables>
+
+                    <!-- Arquillian's config files. -->
+                    <additionalClasspathElements combine.children="append">
+                        <additionalClasspathElement>${jboss.modules.dir}/src/config/arqWildfly</additionalClasspathElement>
+                    </additionalClasspathElements>
+
+                </configuration>
 
 		<executions>
 	            <execution>
